; ModuleID = '/home/carl/AnghaBench/esp-idf/components/protocomm/src/simple_ble/extr_simple_ble.c_simple_ble_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/protocomm/src/simple_ble/extr_simple_ble.c_simple_ble_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"No memory for simple_ble_cfg_t\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @simple_ble_init() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i64 @malloc(i32 4)
  %4 = inttoptr i64 %3 to i32*
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i32, i32* @TAG, align 4
  %9 = call i32 @ESP_LOGE(i32 %8, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %1, align 8
  br label %12

10:                                               ; preds = %0
  %11 = load i32*, i32** %2, align 8
  store i32* %11, i32** %1, align 8
  br label %12

12:                                               ; preds = %10, %7
  %13 = load i32*, i32** %1, align 8
  ret i32* %13
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @ESP_LOGE(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
